# Lexikon-app

./: .env  README  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2023_07_01_0133_create_tables.py  2023_07_12_1336_create_table_src_words_questions.py  2023_07_16_1229_create_table_learning.py  2023_07_16_1229_create_table_learnt_word_grammar.py  2023_07_16_1229_insert_data_word_table.py  2023_07_29_0312_create_table_question.py  2023_08_06_0845_insert_data_word.py  2023_08_06_0849_insert_data_question.py
backend/config/: database.py  setting.py
backend/core/: api.py
backend/core/endpoints/: authentication.py  content.py  home.py  look_up.py  practice.py  question.py  test.py  users.py
backend/langs/: lexikon.vi.yml
backend/models/: answered_question.py  base.py  grammar.py  learning.py  level.py  question.py  test.py  user.py  users.py  word.py  word_learning.py
backend/schemas/: answered_question.py  auth.py  base.py  learning_word.py  question.py  test.py  user.py
backend/services/: auth_service.py  master.py
backend/sql/: sql01.sql
backend/utils/: auth.py  mecab.py
frontend/: Dockerfile  babel.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue  index.js
frontend/src/locale/: vi.json
frontend/src/plugins/: axios.ts  i18n.ts  index.ts  validate.ts
frontend/src/router/: index.ts
frontend/src/store/: history.js
frontend/src/utils/: index.js  (+3 more)
(+36 files in other folders)
