[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["duyendtcidm <duyendtcidm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crashtest = "^0.4.1"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
